# plc_system_setup

./: package-lock.json  package.json
src/: App.css  App.tsx  MainBase.css  MainBase.css.old  MainBase.tsx  MainBase.tsx.old  PlcComponent.css  PlcComponent.tsx  SettingScreen.tsx  TestModals.css  TestModals.tsx  ThemeColor.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database_functions.rs  lib.rs  main.rs  tauri_commands.rs
